{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 58,
  "lineage": "b27dc51b-6386-7dcd-f0b0-ec315477b837",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052ee4cc744c00da6",
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:elastic-ip/eipalloc-052ee4cc744c00da6",
            "association_id": "eipassoc-0db6f1796c2794bc9",
            "domain": "vpc",
            "id": "eipalloc-052ee4cc744c00da6",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0650facf87c6c2d24",
            "private_dns": "ip-10-0-1-106.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-18-136-58-97.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.58.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-nat-eip",
              "Project": "apps-crud-bank"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-nat-eip",
              "Project": "apps-crud-bank"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:internet-gateway/igw-05b4bc237d7dacc8b",
            "id": "igw-05b4bc237d7dacc8b",
            "owner_id": "292195077353",
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-igw",
              "Project": "apps-crud-bank"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-igw",
              "Project": "apps-crud-bank"
            },
            "vpc_id": "vpc-0271f9e41e7381c0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052ee4cc744c00da6",
            "association_id": "eipassoc-0db6f1796c2794bc9",
            "connectivity_type": "public",
            "id": "nat-05bfa303a274fac94",
            "network_interface_id": "eni-0650facf87c6c2d24",
            "private_ip": "10.0.1.106",
            "public_ip": "18.136.58.97",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e7acdaf88857025b",
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-nat",
              "Project": "apps-crud-bank"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-nat",
              "Project": "apps-crud-bank"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:route-table/rtb-00af42083db10e11a",
            "id": "rtb-00af42083db10e11a",
            "owner_id": "292195077353",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05bfa303a274fac94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-rt-private",
              "Project": "apps-crud-bank"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-rt-private",
              "Project": "apps-crud-bank"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271f9e41e7381c0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:route-table/rtb-02ff59561d2b4f345",
            "id": "rtb-02ff59561d2b4f345",
            "owner_id": "292195077353",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b4bc237d7dacc8b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-rt-public",
              "Project": "apps-crud-bank"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-rt-public",
              "Project": "apps-crud-bank"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271f9e41e7381c0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b06436dedfb3dc",
            "route_table_id": "rtb-00af42083db10e11a",
            "subnet_id": "subnet-0c27e973beb83e29d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f94a902c1fae6b1",
            "route_table_id": "rtb-00af42083db10e11a",
            "subnet_id": "subnet-0853c922f0fc1456f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4306cb92d6eab57",
            "route_table_id": "rtb-02ff59561d2b4f345",
            "subnet_id": "subnet-0e7acdaf88857025b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5a4b55f48ef9a3b",
            "route_table_id": "rtb-02ff59561d2b4f345",
            "subnet_id": "subnet-047614e320c603676"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:security-group/sg-03378b01d6644794a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03378b01d6644794a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bfcc0f235e0612c7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "apps-crud-bank-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "292195077353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-rds-sg",
              "Project": "apps-crud-bank"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-rds-sg",
              "Project": "apps-crud-bank"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271f9e41e7381c0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1415500657",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03378b01d6644794a",
            "security_group_rule_id": "sgr-0bff8a28b4e32f2d2",
            "self": false,
            "source_security_group_id": "sg-0bfcc0f235e0612c7",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:subnet/subnet-0c27e973beb83e29d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c27e973beb83e29d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292195077353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-private-a",
              "Project": "apps-crud-bank",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-private-a",
              "Project": "apps-crud-bank",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0271f9e41e7381c0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:subnet/subnet-0853c922f0fc1456f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0853c922f0fc1456f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292195077353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-private-b",
              "Project": "apps-crud-bank",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-private-b",
              "Project": "apps-crud-bank",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0271f9e41e7381c0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:subnet/subnet-0e7acdaf88857025b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7acdaf88857025b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292195077353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-public-a",
              "Project": "apps-crud-bank",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-public-a",
              "Project": "apps-crud-bank",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0271f9e41e7381c0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:subnet/subnet-047614e320c603676",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047614e320c603676",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292195077353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-public-b",
              "Project": "apps-crud-bank",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-public-b",
              "Project": "apps-crud-bank",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0271f9e41e7381c0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:292195077353:vpc/vpc-0271f9e41e7381c0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0158b842973d441",
            "default_route_table_id": "rtb-08bdcc6c6de75278f",
            "default_security_group_id": "sg-030b149e897c5ffaa",
            "dhcp_options_id": "dopt-03382e69b16df4b27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0271f9e41e7381c0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bdcc6c6de75278f",
            "owner_id": "292195077353",
            "tags": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-vpc",
              "Project": "apps-crud-bank"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "apps-crud-bank-prod-vpc",
              "Project": "apps-crud-bank"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}